Make it possible to run on Java 1.8